package com.bcopstein.ex4_lancheriaddd_v1.Dominio.Entidades;
// Classe CabecalhoCardapio: responsabilidade principal inferida pelo nome 

//Cabeçalho de identificação de um cardápio, contendo id e título
public record CabecalhoCardapio(long id,String titulo) { }
